--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="dark-star.svg" media="(prefers-color-scheme: light)" />
-  <link rel="icon" type="image/svg+xml" href="white-star.svg" media="(prefers-color-scheme: dark)" />
+  <link rel="icon" type="image/svg+xml" href="/icons/dark-star.svg" media="(prefers-color-scheme: light)" />
+  <link rel="icon" type="image/svg+xml" href="/icons/white-star.svg" media="(prefers-color-scheme: dark)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carlos Zamora | Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
